src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ENTREGAR
    EQUAL
    NOT_EQUAL
    O
    PLANTAR
    PUERTA_CLOSE
    PUERTA_OPEN
    RECETA
    STRING
    VALLA
    Y

Grammar

Rule 0     S' -> programa
Rule 1     programa -> GRANJA instrucciones CIERRE
Rule 2     instrucciones -> instruccion
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instruccion -> declaracion
Rule 5     instruccion -> mostrar
Rule 6     instruccion -> condicional
Rule 7     instruccion -> bucle_mientras
Rule 8     instruccion -> bucle_dia
Rule 9     declaracion -> SEMILLA ID UBICAR expresion CIERRE_FINAL
Rule 10    mostrar -> MOSTRAR expresion CIERRE_FINAL
Rule 11    expresion -> expresion MAYOR expresion
Rule 12    expresion -> expresion MENOR expresion
Rule 13    expresion -> expresion MAYOR_O_IGUAL expresion
Rule 14    expresion -> expresion MENOR_O_IGUAL expresion
Rule 15    expresion -> termino
Rule 16    expresion -> expresion PLUS termino
Rule 17    expresion -> expresion MINUS termino
Rule 18    termino -> factor
Rule 19    termino -> termino MUL factor
Rule 20    termino -> termino DIV factor
Rule 21    factor -> NUM
Rule 22    factor -> ID
Rule 23    factor -> CORRAL_OPEN expresion CORRAL_CLOSE
Rule 24    condicional -> SIEMBRA expresion ENTONCES instrucciones COSECHA
Rule 25    condicional -> SIEMBRA expresion ENTONCES instrucciones COSECHA instrucciones
Rule 26    bucle_mientras -> MIENTRAS expresion INVERNADERO instrucciones CIERRE
Rule 27    bucle_dia -> DIA ID UBICAR NUM INVERNADERO instrucciones CIERRE

Terminals, with rules where they appear

CIERRE               : 1 26 27
CIERRE_FINAL         : 9 10
CORRAL_CLOSE         : 23
CORRAL_OPEN          : 23
COSECHA              : 24 25
DIA                  : 27
DIV                  : 20
ENTONCES             : 24 25
ENTREGAR             : 
EQUAL                : 
GRANJA               : 1
ID                   : 9 22 27
INVERNADERO          : 26 27
MAYOR                : 11
MAYOR_O_IGUAL        : 13
MENOR                : 12
MENOR_O_IGUAL        : 14
MIENTRAS             : 26
MINUS                : 17
MOSTRAR              : 10
MUL                  : 19
NOT_EQUAL            : 
NUM                  : 21 27
O                    : 
PLANTAR              : 
PLUS                 : 16
PUERTA_CLOSE         : 
PUERTA_OPEN          : 
RECETA               : 
SEMILLA              : 9
SIEMBRA              : 24 25
STRING               : 
UBICAR               : 9 27
VALLA                : 
Y                    : 
error                : 

Nonterminals, with rules where they appear

bucle_dia            : 8
bucle_mientras       : 7
condicional          : 6
declaracion          : 4
expresion            : 9 10 11 11 12 12 13 13 14 14 16 17 23 24 25 26
factor               : 18 19 20
instruccion          : 2 3
instrucciones        : 1 3 24 25 25 26 27
mostrar              : 5
programa             : 0
termino              : 15 16 17 19 20

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . GRANJA instrucciones CIERRE

    GRANJA          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> GRANJA . instrucciones CIERRE
    (2) instrucciones -> . instruccion
    (3) instrucciones -> . instrucciones instruccion
    (4) instruccion -> . declaracion
    (5) instruccion -> . mostrar
    (6) instruccion -> . condicional
    (7) instruccion -> . bucle_mientras
    (8) instruccion -> . bucle_dia
    (9) declaracion -> . SEMILLA ID UBICAR expresion CIERRE_FINAL
    (10) mostrar -> . MOSTRAR expresion CIERRE_FINAL
    (24) condicional -> . SIEMBRA expresion ENTONCES instrucciones COSECHA
    (25) condicional -> . SIEMBRA expresion ENTONCES instrucciones COSECHA instrucciones
    (26) bucle_mientras -> . MIENTRAS expresion INVERNADERO instrucciones CIERRE
    (27) bucle_dia -> . DIA ID UBICAR NUM INVERNADERO instrucciones CIERRE

    SEMILLA         shift and go to state 10
    MOSTRAR         shift and go to state 11
    SIEMBRA         shift and go to state 12
    MIENTRAS        shift and go to state 13
    DIA             shift and go to state 14

    instrucciones                  shift and go to state 3
    instruccion                    shift and go to state 4
    declaracion                    shift and go to state 5
    mostrar                        shift and go to state 6
    condicional                    shift and go to state 7
    bucle_mientras                 shift and go to state 8
    bucle_dia                      shift and go to state 9

state 3

    (1) programa -> GRANJA instrucciones . CIERRE
    (3) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . declaracion
    (5) instruccion -> . mostrar
    (6) instruccion -> . condicional
    (7) instruccion -> . bucle_mientras
    (8) instruccion -> . bucle_dia
    (9) declaracion -> . SEMILLA ID UBICAR expresion CIERRE_FINAL
    (10) mostrar -> . MOSTRAR expresion CIERRE_FINAL
    (24) condicional -> . SIEMBRA expresion ENTONCES instrucciones COSECHA
    (25) condicional -> . SIEMBRA expresion ENTONCES instrucciones COSECHA instrucciones
    (26) bucle_mientras -> . MIENTRAS expresion INVERNADERO instrucciones CIERRE
    (27) bucle_dia -> . DIA ID UBICAR NUM INVERNADERO instrucciones CIERRE

    CIERRE          shift and go to state 15
    SEMILLA         shift and go to state 10
    MOSTRAR         shift and go to state 11
    SIEMBRA         shift and go to state 12
    MIENTRAS        shift and go to state 13
    DIA             shift and go to state 14

    instruccion                    shift and go to state 16
    declaracion                    shift and go to state 5
    mostrar                        shift and go to state 6
    condicional                    shift and go to state 7
    bucle_mientras                 shift and go to state 8
    bucle_dia                      shift and go to state 9

state 4

    (2) instrucciones -> instruccion .

    CIERRE          reduce using rule 2 (instrucciones -> instruccion .)
    SEMILLA         reduce using rule 2 (instrucciones -> instruccion .)
    MOSTRAR         reduce using rule 2 (instrucciones -> instruccion .)
    SIEMBRA         reduce using rule 2 (instrucciones -> instruccion .)
    MIENTRAS        reduce using rule 2 (instrucciones -> instruccion .)
    DIA             reduce using rule 2 (instrucciones -> instruccion .)
    COSECHA         reduce using rule 2 (instrucciones -> instruccion .)


state 5

    (4) instruccion -> declaracion .

    CIERRE          reduce using rule 4 (instruccion -> declaracion .)
    SEMILLA         reduce using rule 4 (instruccion -> declaracion .)
    MOSTRAR         reduce using rule 4 (instruccion -> declaracion .)
    SIEMBRA         reduce using rule 4 (instruccion -> declaracion .)
    MIENTRAS        reduce using rule 4 (instruccion -> declaracion .)
    DIA             reduce using rule 4 (instruccion -> declaracion .)
    COSECHA         reduce using rule 4 (instruccion -> declaracion .)


state 6

    (5) instruccion -> mostrar .

    CIERRE          reduce using rule 5 (instruccion -> mostrar .)
    SEMILLA         reduce using rule 5 (instruccion -> mostrar .)
    MOSTRAR         reduce using rule 5 (instruccion -> mostrar .)
    SIEMBRA         reduce using rule 5 (instruccion -> mostrar .)
    MIENTRAS        reduce using rule 5 (instruccion -> mostrar .)
    DIA             reduce using rule 5 (instruccion -> mostrar .)
    COSECHA         reduce using rule 5 (instruccion -> mostrar .)


state 7

    (6) instruccion -> condicional .

    CIERRE          reduce using rule 6 (instruccion -> condicional .)
    SEMILLA         reduce using rule 6 (instruccion -> condicional .)
    MOSTRAR         reduce using rule 6 (instruccion -> condicional .)
    SIEMBRA         reduce using rule 6 (instruccion -> condicional .)
    MIENTRAS        reduce using rule 6 (instruccion -> condicional .)
    DIA             reduce using rule 6 (instruccion -> condicional .)
    COSECHA         reduce using rule 6 (instruccion -> condicional .)


state 8

    (7) instruccion -> bucle_mientras .

    CIERRE          reduce using rule 7 (instruccion -> bucle_mientras .)
    SEMILLA         reduce using rule 7 (instruccion -> bucle_mientras .)
    MOSTRAR         reduce using rule 7 (instruccion -> bucle_mientras .)
    SIEMBRA         reduce using rule 7 (instruccion -> bucle_mientras .)
    MIENTRAS        reduce using rule 7 (instruccion -> bucle_mientras .)
    DIA             reduce using rule 7 (instruccion -> bucle_mientras .)
    COSECHA         reduce using rule 7 (instruccion -> bucle_mientras .)


state 9

    (8) instruccion -> bucle_dia .

    CIERRE          reduce using rule 8 (instruccion -> bucle_dia .)
    SEMILLA         reduce using rule 8 (instruccion -> bucle_dia .)
    MOSTRAR         reduce using rule 8 (instruccion -> bucle_dia .)
    SIEMBRA         reduce using rule 8 (instruccion -> bucle_dia .)
    MIENTRAS        reduce using rule 8 (instruccion -> bucle_dia .)
    DIA             reduce using rule 8 (instruccion -> bucle_dia .)
    COSECHA         reduce using rule 8 (instruccion -> bucle_dia .)


state 10

    (9) declaracion -> SEMILLA . ID UBICAR expresion CIERRE_FINAL

    ID              shift and go to state 17


state 11

    (10) mostrar -> MOSTRAR . expresion CIERRE_FINAL
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 18
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 12

    (24) condicional -> SIEMBRA . expresion ENTONCES instrucciones COSECHA
    (25) condicional -> SIEMBRA . expresion ENTONCES instrucciones COSECHA instrucciones
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 24
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 13

    (26) bucle_mientras -> MIENTRAS . expresion INVERNADERO instrucciones CIERRE
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 25
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 14

    (27) bucle_dia -> DIA . ID UBICAR NUM INVERNADERO instrucciones CIERRE

    ID              shift and go to state 26


state 15

    (1) programa -> GRANJA instrucciones CIERRE .

    $end            reduce using rule 1 (programa -> GRANJA instrucciones CIERRE .)


state 16

    (3) instrucciones -> instrucciones instruccion .

    CIERRE          reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    SEMILLA         reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    MOSTRAR         reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    SIEMBRA         reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    MIENTRAS        reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    DIA             reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    COSECHA         reduce using rule 3 (instrucciones -> instrucciones instruccion .)


state 17

    (9) declaracion -> SEMILLA ID . UBICAR expresion CIERRE_FINAL

    UBICAR          shift and go to state 27


state 18

    (10) mostrar -> MOSTRAR expresion . CIERRE_FINAL
    (11) expresion -> expresion . MAYOR expresion
    (12) expresion -> expresion . MENOR expresion
    (13) expresion -> expresion . MAYOR_O_IGUAL expresion
    (14) expresion -> expresion . MENOR_O_IGUAL expresion
    (16) expresion -> expresion . PLUS termino
    (17) expresion -> expresion . MINUS termino

    CIERRE_FINAL    shift and go to state 28
    MAYOR           shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR_O_IGUAL   shift and go to state 31
    MENOR_O_IGUAL   shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34


state 19

    (15) expresion -> termino .
    (19) termino -> termino . MUL factor
    (20) termino -> termino . DIV factor

    CIERRE_FINAL    reduce using rule 15 (expresion -> termino .)
    MAYOR           reduce using rule 15 (expresion -> termino .)
    MENOR           reduce using rule 15 (expresion -> termino .)
    MAYOR_O_IGUAL   reduce using rule 15 (expresion -> termino .)
    MENOR_O_IGUAL   reduce using rule 15 (expresion -> termino .)
    PLUS            reduce using rule 15 (expresion -> termino .)
    MINUS           reduce using rule 15 (expresion -> termino .)
    ENTONCES        reduce using rule 15 (expresion -> termino .)
    INVERNADERO     reduce using rule 15 (expresion -> termino .)
    CORRAL_CLOSE    reduce using rule 15 (expresion -> termino .)
    MUL             shift and go to state 35
    DIV             shift and go to state 36


state 20

    (18) termino -> factor .

    MUL             reduce using rule 18 (termino -> factor .)
    DIV             reduce using rule 18 (termino -> factor .)
    CIERRE_FINAL    reduce using rule 18 (termino -> factor .)
    MAYOR           reduce using rule 18 (termino -> factor .)
    MENOR           reduce using rule 18 (termino -> factor .)
    MAYOR_O_IGUAL   reduce using rule 18 (termino -> factor .)
    MENOR_O_IGUAL   reduce using rule 18 (termino -> factor .)
    PLUS            reduce using rule 18 (termino -> factor .)
    MINUS           reduce using rule 18 (termino -> factor .)
    ENTONCES        reduce using rule 18 (termino -> factor .)
    INVERNADERO     reduce using rule 18 (termino -> factor .)
    CORRAL_CLOSE    reduce using rule 18 (termino -> factor .)


state 21

    (21) factor -> NUM .

    MUL             reduce using rule 21 (factor -> NUM .)
    DIV             reduce using rule 21 (factor -> NUM .)
    CIERRE_FINAL    reduce using rule 21 (factor -> NUM .)
    MAYOR           reduce using rule 21 (factor -> NUM .)
    MENOR           reduce using rule 21 (factor -> NUM .)
    MAYOR_O_IGUAL   reduce using rule 21 (factor -> NUM .)
    MENOR_O_IGUAL   reduce using rule 21 (factor -> NUM .)
    PLUS            reduce using rule 21 (factor -> NUM .)
    MINUS           reduce using rule 21 (factor -> NUM .)
    ENTONCES        reduce using rule 21 (factor -> NUM .)
    INVERNADERO     reduce using rule 21 (factor -> NUM .)
    CORRAL_CLOSE    reduce using rule 21 (factor -> NUM .)


state 22

    (22) factor -> ID .

    MUL             reduce using rule 22 (factor -> ID .)
    DIV             reduce using rule 22 (factor -> ID .)
    CIERRE_FINAL    reduce using rule 22 (factor -> ID .)
    MAYOR           reduce using rule 22 (factor -> ID .)
    MENOR           reduce using rule 22 (factor -> ID .)
    MAYOR_O_IGUAL   reduce using rule 22 (factor -> ID .)
    MENOR_O_IGUAL   reduce using rule 22 (factor -> ID .)
    PLUS            reduce using rule 22 (factor -> ID .)
    MINUS           reduce using rule 22 (factor -> ID .)
    ENTONCES        reduce using rule 22 (factor -> ID .)
    INVERNADERO     reduce using rule 22 (factor -> ID .)
    CORRAL_CLOSE    reduce using rule 22 (factor -> ID .)


state 23

    (23) factor -> CORRAL_OPEN . expresion CORRAL_CLOSE
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 37
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 24

    (24) condicional -> SIEMBRA expresion . ENTONCES instrucciones COSECHA
    (25) condicional -> SIEMBRA expresion . ENTONCES instrucciones COSECHA instrucciones
    (11) expresion -> expresion . MAYOR expresion
    (12) expresion -> expresion . MENOR expresion
    (13) expresion -> expresion . MAYOR_O_IGUAL expresion
    (14) expresion -> expresion . MENOR_O_IGUAL expresion
    (16) expresion -> expresion . PLUS termino
    (17) expresion -> expresion . MINUS termino

    ENTONCES        shift and go to state 38
    MAYOR           shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR_O_IGUAL   shift and go to state 31
    MENOR_O_IGUAL   shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34


state 25

    (26) bucle_mientras -> MIENTRAS expresion . INVERNADERO instrucciones CIERRE
    (11) expresion -> expresion . MAYOR expresion
    (12) expresion -> expresion . MENOR expresion
    (13) expresion -> expresion . MAYOR_O_IGUAL expresion
    (14) expresion -> expresion . MENOR_O_IGUAL expresion
    (16) expresion -> expresion . PLUS termino
    (17) expresion -> expresion . MINUS termino

    INVERNADERO     shift and go to state 39
    MAYOR           shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR_O_IGUAL   shift and go to state 31
    MENOR_O_IGUAL   shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34


state 26

    (27) bucle_dia -> DIA ID . UBICAR NUM INVERNADERO instrucciones CIERRE

    UBICAR          shift and go to state 40


state 27

    (9) declaracion -> SEMILLA ID UBICAR . expresion CIERRE_FINAL
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 41
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 28

    (10) mostrar -> MOSTRAR expresion CIERRE_FINAL .

    CIERRE          reduce using rule 10 (mostrar -> MOSTRAR expresion CIERRE_FINAL .)
    SEMILLA         reduce using rule 10 (mostrar -> MOSTRAR expresion CIERRE_FINAL .)
    MOSTRAR         reduce using rule 10 (mostrar -> MOSTRAR expresion CIERRE_FINAL .)
    SIEMBRA         reduce using rule 10 (mostrar -> MOSTRAR expresion CIERRE_FINAL .)
    MIENTRAS        reduce using rule 10 (mostrar -> MOSTRAR expresion CIERRE_FINAL .)
    DIA             reduce using rule 10 (mostrar -> MOSTRAR expresion CIERRE_FINAL .)
    COSECHA         reduce using rule 10 (mostrar -> MOSTRAR expresion CIERRE_FINAL .)


state 29

    (11) expresion -> expresion MAYOR . expresion
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 42
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 30

    (12) expresion -> expresion MENOR . expresion
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 43
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 31

    (13) expresion -> expresion MAYOR_O_IGUAL . expresion
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 44
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 32

    (14) expresion -> expresion MENOR_O_IGUAL . expresion
    (11) expresion -> . expresion MAYOR expresion
    (12) expresion -> . expresion MENOR expresion
    (13) expresion -> . expresion MAYOR_O_IGUAL expresion
    (14) expresion -> . expresion MENOR_O_IGUAL expresion
    (15) expresion -> . termino
    (16) expresion -> . expresion PLUS termino
    (17) expresion -> . expresion MINUS termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    expresion                      shift and go to state 45
    termino                        shift and go to state 19
    factor                         shift and go to state 20

state 33

    (16) expresion -> expresion PLUS . termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    termino                        shift and go to state 46
    factor                         shift and go to state 20

state 34

    (17) expresion -> expresion MINUS . termino
    (18) termino -> . factor
    (19) termino -> . termino MUL factor
    (20) termino -> . termino DIV factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    termino                        shift and go to state 47
    factor                         shift and go to state 20

state 35

    (19) termino -> termino MUL . factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    factor                         shift and go to state 48

state 36

    (20) termino -> termino DIV . factor
    (21) factor -> . NUM
    (22) factor -> . ID
    (23) factor -> . CORRAL_OPEN expresion CORRAL_CLOSE

    NUM             shift and go to state 21
    ID              shift and go to state 22
    CORRAL_OPEN     shift and go to state 23

    factor                         shift and go to state 49

state 37

    (23) factor -> CORRAL_OPEN expresion . CORRAL_CLOSE
    (11) expresion -> expresion . MAYOR expresion
    (12) expresion -> expresion . MENOR expresion
    (13) expresion -> expresion . MAYOR_O_IGUAL expresion
    (14) expresion -> expresion . MENOR_O_IGUAL expresion
    (16) expresion -> expresion . PLUS termino
    (17) expresion -> expresion . MINUS termino

    CORRAL_CLOSE    shift and go to state 50
    MAYOR           shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR_O_IGUAL   shift and go to state 31
    MENOR_O_IGUAL   shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34


state 38

    (24) condicional -> SIEMBRA expresion ENTONCES . instrucciones COSECHA
    (25) condicional -> SIEMBRA expresion ENTONCES . instrucciones COSECHA instrucciones
    (2) instrucciones -> . instruccion
    (3) instrucciones -> . instrucciones instruccion
    (4) instruccion -> . declaracion
    (5) instruccion -> . mostrar
    (6) instruccion -> . condicional
    (7) instruccion -> . bucle_mientras
    (8) instruccion -> . bucle_dia
    (9) declaracion -> . SEMILLA ID UBICAR expresion CIERRE_FINAL
    (10) mostrar -> . MOSTRAR expresion CIERRE_FINAL
    (24) condicional -> . SIEMBRA expresion ENTONCES instrucciones COSECHA
    (25) condicional -> . SIEMBRA expresion ENTONCES instrucciones COSECHA instrucciones
    (26) bucle_mientras -> . MIENTRAS expresion INVERNADERO instrucciones CIERRE
    (27) bucle_dia -> . DIA ID UBICAR NUM INVERNADERO instrucciones CIERRE

    SEMILLA         shift and go to state 10
    MOSTRAR         shift and go to state 11
    SIEMBRA         shift and go to state 12
    MIENTRAS        shift and go to state 13
    DIA             shift and go to state 14

    instrucciones                  shift and go to state 51
    instruccion                    shift and go to state 4
    declaracion                    shift and go to state 5
    mostrar                        shift and go to state 6
    condicional                    shift and go to state 7
    bucle_mientras                 shift and go to state 8
    bucle_dia                      shift and go to state 9

state 39

    (26) bucle_mientras -> MIENTRAS expresion INVERNADERO . instrucciones CIERRE
    (2) instrucciones -> . instruccion
    (3) instrucciones -> . instrucciones instruccion
    (4) instruccion -> . declaracion
    (5) instruccion -> . mostrar
    (6) instruccion -> . condicional
    (7) instruccion -> . bucle_mientras
    (8) instruccion -> . bucle_dia
    (9) declaracion -> . SEMILLA ID UBICAR expresion CIERRE_FINAL
    (10) mostrar -> . MOSTRAR expresion CIERRE_FINAL
    (24) condicional -> . SIEMBRA expresion ENTONCES instrucciones COSECHA
    (25) condicional -> . SIEMBRA expresion ENTONCES instrucciones COSECHA instrucciones
    (26) bucle_mientras -> . MIENTRAS expresion INVERNADERO instrucciones CIERRE
    (27) bucle_dia -> . DIA ID UBICAR NUM INVERNADERO instrucciones CIERRE

    SEMILLA         shift and go to state 10
    MOSTRAR         shift and go to state 11
    SIEMBRA         shift and go to state 12
    MIENTRAS        shift and go to state 13
    DIA             shift and go to state 14

    instrucciones                  shift and go to state 52
    instruccion                    shift and go to state 4
    declaracion                    shift and go to state 5
    mostrar                        shift and go to state 6
    condicional                    shift and go to state 7
    bucle_mientras                 shift and go to state 8
    bucle_dia                      shift and go to state 9

state 40

    (27) bucle_dia -> DIA ID UBICAR . NUM INVERNADERO instrucciones CIERRE

    NUM             shift and go to state 53


state 41

    (9) declaracion -> SEMILLA ID UBICAR expresion . CIERRE_FINAL
    (11) expresion -> expresion . MAYOR expresion
    (12) expresion -> expresion . MENOR expresion
    (13) expresion -> expresion . MAYOR_O_IGUAL expresion
    (14) expresion -> expresion . MENOR_O_IGUAL expresion
    (16) expresion -> expresion . PLUS termino
    (17) expresion -> expresion . MINUS termino

    CIERRE_FINAL    shift and go to state 54
    MAYOR           shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR_O_IGUAL   shift and go to state 31
    MENOR_O_IGUAL   shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34


state 42

    (11) expresion -> expresion MAYOR expresion .
    (11) expresion -> expresion . MAYOR expresion
    (12) expresion -> expresion . MENOR expresion
    (13) expresion -> expresion . MAYOR_O_IGUAL expresion
    (14) expresion -> expresion . MENOR_O_IGUAL expresion
    (16) expresion -> expresion . PLUS termino
    (17) expresion -> expresion . MINUS termino

  ! shift/reduce conflict for MAYOR resolved as shift
  ! shift/reduce conflict for MENOR resolved as shift
  ! shift/reduce conflict for MAYOR_O_IGUAL resolved as shift
  ! shift/reduce conflict for MENOR_O_IGUAL resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    CIERRE_FINAL    reduce using rule 11 (expresion -> expresion MAYOR expresion .)
    ENTONCES        reduce using rule 11 (expresion -> expresion MAYOR expresion .)
    INVERNADERO     reduce using rule 11 (expresion -> expresion MAYOR expresion .)
    CORRAL_CLOSE    reduce using rule 11 (expresion -> expresion MAYOR expresion .)
    MAYOR           shift and go to state 29
    MENOR           shift and go to state 30
    MAYOR_O_IGUAL   shift and go to state 31
    MENOR_O_IGUAL   shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
